# OpenGL-GLFW

./: .gitignore  CMakeLists.txt  README.md  configure.sh  imgui.ini  main.cpp  makefile  run.sh
assets/models/: donut.mtl  planet.mtl  rock.mtl
assets/shaders/: batch.glsl  blending.frag  cube.glsl  cube_textured.glsl  environmentMapping.glsl  instanceMatrix.glsl  instancing.glsl  lightCasters.glsl  lightSource.glsl  lightSourceVariableColor.glsl  lighting.glsl  lightingMaps.glsl  materials.glsl  models.glsl  mvp.vert  outline.frag  postProcessing.frag  shader.glsl  texture2D.vert
cmake/: FindGLFW3.cmake
src/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  main.cpp
src/tests/: Test.cpp  Test.hpp  TestBatchRendering.cpp  TestBatchRendering.hpp  TestBlending.cpp  TestBlending.hpp  TestCamera.cpp  TestCamera.hpp  TestCameraClass.cpp  TestCameraClass.hpp  TestClearColor.cpp  TestClearColor.hpp  TestCube3D.cpp  TestCube3D.hpp  TestCubemaps.cpp  TestCubemaps.hpp  TestDiffuseSpecularMaps.cpp  TestDiffuseSpecularMaps.hpp  TestDynamicBatchRendering.cpp  TestDynamicBatchRendering.hpp  TestFramebuffers.cpp  TestFramebuffers.hpp  TestInstancing.cpp  TestInstancing.hpp  TestLightCasters.cpp  TestLightCasters.hpp  TestLighting.cpp  TestLighting.hpp  TestMaterials.cpp  TestMaterials.hpp  TestModel.cpp  TestModel.hpp  TestStencil.cpp  TestStencil.hpp  TestTexture2D.cpp  TestTexture2D.hpp  TestTexturedCube.cpp  (+1 more)
